
INCLUDE_DIRECTORIES(
${BULLET_PHYSICS_SOURCE_DIR}/src
	
)

#SUBDIRS( Sph )

SET(Bullet3Fluids_SRCS
  Sph/b3FluidParticles.cpp
  Sph/b3FluidSortingGrid.cpp
  Sph/b3FluidSph.cpp
  Sph/b3FluidSphSolver.cpp
)

SET(Bullet3Fluids_HDRS
  Sph/b3FluidParticles.h
  Sph/b3FluidSortingGrid.h
  Sph/b3FluidSph.h
  Sph/b3FluidSphParameters.h
  Sph/b3FluidSphSolver.h
  Sph/b3FluidSphTypedData.h
  Sph/b3FluidSphUpdatePacket.h
)



ADD_LIBRARY(Bullet3Fluids  ${Bullet3Fluids_SRCS} ${Bullet3Fluids_HDRS})
SET_TARGET_PROPERTIES(Bullet3Fluids PROPERTIES VERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(Bullet3Fluids PROPERTIES SOVERSION ${BULLET_VERSION})
IF (BUILD_SHARED_LIBS)
	TARGET_LINK_LIBRARIES(Bullet3Fluids BulletDynamics)
ENDIF (BUILD_SHARED_LIBS)

IF (INSTALL_LIBS)
	IF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
			IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS Bullet3Fluids DESTINATION .)
			ELSE (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
			INSTALL(TARGETS Bullet3Fluids RUNTIME DESTINATION bin
							LIBRARY DESTINATION lib${LIB_SUFFIX}
							ARCHIVE DESTINATION lib${LIB_SUFFIX})
				INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
DESTINATION ${INCLUDE_INSTALL_DIR} FILES_MATCHING PATTERN "*.h"  PATTERN
".svn" EXCLUDE PATTERN "CMakeFiles" EXCLUDE)
			ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
		ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)

		IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
			SET_TARGET_PROPERTIES(Bullet3Fluids PROPERTIES FRAMEWORK true)
			SET_TARGET_PROPERTIES(Bullet3Fluids PROPERTIES PUBLIC_HEADER "${Bullet3Fluids_HDRS}")
		ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
	ENDIF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
ENDIF (INSTALL_LIBS)
