
#find the opencl lib/headers
INCLUDE_DIRECTORIES( ${BULLET_PHYSICS_SOURCE_DIR}/src  )
ADD_DEFINITIONS(-DB3_USE_CLEW)

#SUBDIRS( Solvers )

SET(Bullet3FluidsOpenCL_SRCS
  b3FluidHashGridOpenCL.cpp
  b3FluidSortingGridOpenCL.cpp
  b3FluidSphOpenCL.cpp
  b3FluidSphParticleUpdaterCL.cpp
  b3FluidSphRigidInteractorCL.cpp
  b3FluidSphSolverOpenCL.cpp
  fluidSph.cl
  fluidSphRigid.cl
)

SET(Bullet3FluidsOpenCL_HDRS
  b3FluidHashGridOpenCL.h
  b3FluidSortingGridOpenCL.h
  b3FluidSphOpenCL.h
  b3FluidSphParticleUpdaterCL.h
  b3FluidSphRigidInteractorCL.h
  b3FluidSphSolverOpenCL.h
  fluidSphCL.h
  fluidSphRigidCL.h
)



ADD_LIBRARY(Bullet3FluidsOpenCL  ${Bullet3FluidsOpenCL_SRCS} ${Bullet3FluidsOpenCL_HDRS})
TARGET_LINK_LIBRARIES(Bullet3FluidsOpenCL OpenCL )
SET_TARGET_PROPERTIES(Bullet3FluidsOpenCL PROPERTIES VERSION ${BULLET_VERSION})
SET_TARGET_PROPERTIES(Bullet3FluidsOpenCL PROPERTIES SOVERSION ${BULLET_VERSION})
IF (BUILD_SHARED_LIBS)
	TARGET_LINK_LIBRARIES(Bullet3FluidsOpenCL BulletDynamics)
ENDIF (BUILD_SHARED_LIBS)

IF (INSTALL_LIBS)
	IF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
			IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
				INSTALL(TARGETS Bullet3FluidsOpenCL DESTINATION .)
			ELSE (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
			INSTALL(TARGETS Bullet3FluidsOpenCL RUNTIME DESTINATION bin
							LIBRARY DESTINATION lib${LIB_SUFFIX}
							ARCHIVE DESTINATION lib${LIB_SUFFIX})
				INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
DESTINATION ${INCLUDE_INSTALL_DIR} FILES_MATCHING PATTERN "*.h"  PATTERN
".svn" EXCLUDE PATTERN "CMakeFiles" EXCLUDE)
			ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
		ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)

		IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
			SET_TARGET_PROPERTIES(Bullet3FluidsOpenCL PROPERTIES FRAMEWORK true)
			SET_TARGET_PROPERTIES(Bullet3FluidsOpenCL PROPERTIES PUBLIC_HEADER "${Bullet3FluidsOpenCL_HDRS}")
		ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
	ENDIF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
ENDIF (INSTALL_LIBS)
